# gpp

./: CMakeLists.txt  INSTALL  config.h.in
cmake/: CheckDIRSymbolExists.cmake  CheckPrototypeExists.cmake
src/: CMakeLists.txt  gpp.c
